Perbaikan chaincode
