# application/src/controllers/seedBatch.controller.js
@@ -458,6 +458,7 @@ const issueCertificate = async (req, res) => {
 
         const args = [
             batchId,
+            req.body.certNumber, // certNumber from user input
             req.body.expiryMonths.toString(),
             req.file.originalname,
             uploadedCid,
@@ -479,7 +480,7 @@ const issueCertificate = async (req, res) => {
             message: 'Certificate issued successfully',
             data: {
                 batchId,
-                // certificateNumber is now auto-generated by chaincode
+                certNumber: req.body.certNumber,
                 certifiedQuantity: req.body.certifiedQuantity,
                 ipfsCid: uploadedCid,
                 transactionId: result
